# GearMeshing-AI-Old_Drepated

./: .coveragerc  .env.example  .env.logging.example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.e2e.yml  docker-compose.yml  docker-compose_e2e.yml  mypy.ini  pyproject.toml  pytest.ini  sonar-project.properties
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/tag_and_release/: intent.yaml
.github/workflows/: ci.yaml  ci_includes_e2e_test.yaml  docs-build-check.yaml  documentation.yaml  release-staging.yml  release.yml  rw_build_and_test.yaml  rw_run_all_test_and_record.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 20251224_000000_initial_schema_and_seed_data.py
configs/mcp_gateway/: mcp-catalog.yml  mcp-catalog_e2e.yml
docs/: package.json  pnpm-lock.yaml
docs/openapi_spec/: mcp_gateway.json
gearmeshing_ai/: __init__.py
gearmeshing_ai/agent_core/: __init__.py  agent_registry.py  db_config_provider.py  factory.py  model_provider.py  model_provider_refactored.py  monitoring_integration.py  role_provider.py  roles.py  router.py  service.py
gearmeshing_ai/agent_core/abstraction/: __init__.py  api_key_validator.py  base.py  cache.py  config.py  config_source.py  factory.py  initialization.py  model_provider.py  provider.py  provider_env_standards.py
gearmeshing_ai/agent_core/abstraction/adapters/: __init__.py  pydantic_ai.py  pydantic_ai_model_provider.py
gearmeshing_ai/agent_core/abstraction/tools/: __init__.py  definitions.py  handlers.py
gearmeshing_ai/agent_core/capabilities/: __init__.py  base.py  builtin.py  registry.py
gearmeshing_ai/agent_core/planning/: __init__.py  planner.py  steps.py
gearmeshing_ai/agent_core/policy/: __init__.py  global_policy.py  models.py  provider.py
gearmeshing_ai/agent_core/repos/: __init__.py  interfaces.py  models.py  sql.py
gearmeshing_ai/agent_core/runtime/: __init__.py  engine.py  models.py
gearmeshing_ai/agent_core/schemas/: __init__.py  base.py  config.py  domain.py
gearmeshing_ai/core/: __init__.py  logging_config.py  monitoring.py
gearmeshing_ai/core/database/: __init__.py  async_base.py  async_repositories.py  async_repositories_complete.py  base.py  session.py  utils.py
gearmeshing_ai/core/database/entities/: __init__.py  agent_configs.py  (+8 more)
gearmeshing_ai/core/models/: __init__.py  base.py  config.py
gearmeshing_ai/info_provider/: __init__.py  base.py  policy.py
gearmeshing_ai/info_provider/gateway_api/: __init__.py  client.py
gearmeshing_ai/info_provider/mcp/: __init__.py  base.py  client_sync.py  policy.py  provider.py  transport.py
gearmeshing_ai/info_provider/model/: __init__.py  base.py  loader.py  provider.py
gearmeshing_ai/info_provider/prompt/: __init__.py  base.py  builtin.py  loader.py  provider.py  reload.py  stacked.py
gearmeshing_ai/info_provider/role/: __init__.py  base.py  database.py  loader.py  models.py  provider.py  role_provider.py  roles.py  static.py
gearmeshing_ai/info_provider/schemas/: config.py  core.py
gearmeshing_ai/info_provider/strategy/: base.py  direct.py  direct_async.py  gateway.py  gateway_async.py
gearmeshing_ai/info_provider/transport/: __init__.py
gearmeshing_ai/mcp_client/: __init__.py  base.py  client.py  client_async.py  client_sync.py  config.py  errors.py  models.py  policy.py  transport.py
gearmeshing_ai/mcp_client/clients/: __init__.py
gearmeshing_ai/mcp_client/gateway_api/: __init__.py  client.py  dto.py  errors.py  models.py
gearmeshing_ai/mcp_client/schemas/: __init__.py  base.py  config.py  core.py  dto.py
gearmeshing_ai/mcp_client/strategies/: __init__.py  direct.py  gateway.py
gearmeshing_ai/mcp_client/strategy/: __init__.py  base.py  direct.py  direct_async.py  dto.py  gateway.py  gateway_async.py
gearmeshing_ai/mcp_client/transport/: __init__.py  sse.py
gearmeshing_ai/role/: rd.py  sa_sd.py
gearmeshing_ai/server/: __init__.py  main.py  schemas.py
gearmeshing_ai/server/api/: __init__.py
gearmeshing_ai/server/core/: __init__.py  config.py  constant.py  database.py
gearmeshing_ai/server/exception_handlers/: __init__.py  global_handler.py
gearmeshing_ai/server/middleware/: __init__.py  logfire_middleware.py
gearmeshing_ai/server/models/: __init__.py  agent_config.py  chat_session.py
gearmeshing_ai/server/services/: __init__.py  chat_persistence.py  deps.py  orchestrator.py
scripts/docker/: run-server.sh
test/: .env.example  SETTINGS_GUIDE.md  conftest.py  docker-compose.yml  settings.py
test/contract_test/info_provider/: test_client_protocols_contract.py
test/contract_test/mcp_client/: conftest.py  test_ai_frameworks_contract.py  test_client_protocols_contract.py  test_tool_contracts.py
test/e2e_test/agent_core/: test_agent_service_e2e.py  test_policy_provider.py
test/e2e_test/alembic/: conftest.py  test_migration.py
test/e2e_test/mcp_client/: test_full_flow.py
test/integration_test/agent_core/: test_async_model_provider.py  test_config_source_integration.py  test_engine_model_provider_integration.py  test_model_provider_integration.py  test_planner_model_provider_integration.py  test_policy_persistence_integration.py  test_policy_provider_engine_integration.py
test/integration_test/mcp_client/: test_gateway_integration.py  test_mcp_client_integration.py
test/smoke_test/: conftest.py
test/unit_test/agent_core/: test_db_config_provider.py  test_factory_and_service.py  test_model_provider.py  test_model_provider_unified.py  test_monitoring_integration.py  test_role_provider.py  test_roles.py  test_router_and_registry.py
test/unit_test/core/: test_logging_config.py  test_monitoring.py
test/unit_test/info_provider/: test_client_async.py  test_client_factory_and_policy.py  test_client_protocols.py  test_policy_read_only.py  test_protocol_runtime_checks.py
test/unit_test/mcp_client/: test_client.py  test_client_async.py  test_client_factory_and_policy.py  test_client_protocols.py  test_models.py  test_policy.py  test_policy_read_only.py  test_protocol_runtime_checks.py
test/unit_test/server/: conftest.py  test_lifespan.py
(+227 files in other folders)
