[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gearmeshing-ai"
version = "0.0.0"
description = "🤖 A highly self-hostable AI-powered software engineering platform that plugs autonomous developer agents into your workflow."
authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "ai",
    "ai agents",
    "ai-assistents",
    "private",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "autogenstudio>=0.4.2.2",
    "pyautogen>=0.2.19",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://chisanan232.github.io/GearMeshing-AI/"
Documentation = "https://chisanan232.github.io/GearMeshing-AI/intro"
Repository = "https://github.com/Chisanan232/GearMeshing-AI"
#Changelog = "<the release note page in documentation or GitHub release info>"
"Project Management" = "https://app.clickup.com/9018752317/v/f/90185307863/90182761188"

[dependency-groups]
dev = [
    "pytest>=8.1.1,<10",
    "pytest-cov>=5.0.0,<8",
#    "pytest-html>=4.1.1,<5",
    "pytest-rerunfailures~=16.0",
    "coverage~=7.10",
]
pre-commit-ci = [
    "pre-commit>=3.5.0,<5",
    "pylint>=3.1.0,<5",
    "mypy>=1.2.0,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "pre-commit-ci",
]

[tool.hatch.build.targets.sdist]
include = ["gearmeshing_ai/"]

[tool.hatch.build.targets.wheel]
include = ["gearmeshing_ai/"]
