[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gearmeshing-ai"
version = "0.0.0"
description = "🤖 A highly self-hostable AI-powered software engineering platform that plugs autonomous developer agents into your workflow."
authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "ai",
    "ai agents",
    "ai-assistents",
    "private",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # MCP SDK
    "mcp[cli]>=1.10.1",
    # dotenv for secret values loading
    "python-dotenv>=1.0.0",
    # HTTP client
    "httpx>=0.27.0",
    # Pydantic for model validation
    "pydantic>=2.7.0",
]

[project.urls]
Homepage = "https://chisanan232.github.io/GearMeshing-AI/"
Documentation = "https://chisanan232.github.io/GearMeshing-AI/intro"
Repository = "https://github.com/Chisanan232/GearMeshing-AI"
#Changelog = "<the release note page in documentation or GitHub release info>"
"Project Management" = "https://app.clickup.com/9018752317/v/f/90185307863/90182761188"

[dependency-groups]
# Dependencies for the development
dev = [
    "pytest>=8.1.1,<10",
    "pytest-cov>=5.0.0,<8",
    "pytest-asyncio>=0.23.6",
#    "pytest-html>=4.1.1,<5",
    "pytest-rerunfailures~=16.0",
    "coverage~=7.10",
]
# Dependencies for the pre-commit CI in development environment
pre-commit-ci = [
    "pre-commit>=3.5.0,<5",
    "pylint>=3.1.0,<5",
    "mypy>=1.2.0,<2",
]

# Optional group for contract tests with external AI agent frameworks.
# These are heavy optional dependencies and are not enabled by default.
contract-test-with-ai-frameworks = [
    # OpenAI client for function/tool schemas and Assistants
    "openai>=1.52.0,<2.0",
    # AG2 (AutoGen v2)
    "ag2>=0.4.0",
    # AutoGen AgentChat and extensions
    "autogen-agentchat>=0.4.0,<0.5.0",
    "autogen-ext[openai]>=0.4.0,<0.5.0",
    # LangChain core + LangGraph
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langgraph>=0.2.0,<0.3.0",
    # CrewAI and tools (broad min versions to avoid resolver conflicts)
    "crewai>=0.56.0",
    "crewai-tools>=0.13.0",
    # Semantic Kernel (Python)
    "semantic-kernel>=0.9.0b1",
    # LlamaIndex
    "llama-index>=0.11.0,<0.12.0",
    # Phidata
    "phidata>=2.5.0,<3.0.0",
    # Testcontainers for real contract tests
    "testcontainers>=4.7.2",
]

[tool.uv]
default-groups = [
    "dev",
    "pre-commit-ci",
]

[tool.hatch.build.targets.sdist]
include = ["gearmeshing_ai/"]

[tool.hatch.build.targets.wheel]
include = ["gearmeshing_ai/"]
