[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gearmeshing-ai"
version = "0.0.0"
description = "🤖 A highly self-hostable AI-powered software engineering platform that plugs autonomous developer agents into your workflow."
authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "ai",
    "ai agents",
    "ai-assistents",
    "private",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    ## MCP SDK
    "mcp[cli]>=1.10.1",
    ## MCP gateway service
    "mcp-contextforge-gateway>=0.7.0",
    ## dotenv for secret values loading
    "python-dotenv>=1.0.0",
    ## HTTP client
    "httpx>=0.27.0",
    ## Pydantic for model validation
    "pydantic>=2.7.0",
    ## Core agent runtime
    # LangChain core + LangGraph
    "langgraph>=1.0.4",
    # Pydantic AI by FastAPI Pydantic team
    "pydantic-ai>=1.27.0",
    ## Postgres (Neon-compatible) persistence
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
]

[project.urls]
Homepage = "https://chisanan232.github.io/GearMeshing-AI/"
Documentation = "https://chisanan232.github.io/GearMeshing-AI/intro"
Repository = "https://github.com/Chisanan232/GearMeshing-AI"
#Changelog = "<the release note page in documentation or GitHub release info>"
"Project Management" = "https://app.clickup.com/9018752317/v/f/90185307863/90182761188"

[dependency-groups]
# Dependencies for the development
dev = [
    "pytest>=8.1.1,<10",
    "pytest-cov>=5.0.0,<8",
    "pytest-asyncio>=0.23.6",
#    "pytest-html>=4.1.1,<5",
    "pytest-rerunfailures~=16.0",
    "coverage~=7.10",
    # Testcontainers for real contract tests
    "testcontainers>=4.7.2",
]
# Dependencies for the pre-commit CI in development environment
pre-commit-ci = [
    "pre-commit>=3.5.0,<5",
    "pylint>=3.1.0,<5",
    "mypy>=1.2.0,<2",
]

# Optional group for contract tests with external AI agent frameworks.
# These are heavy optional dependencies and are not enabled by default.
contract-test-with-ai-frameworks = [
    # OpenAI client for function/tool schemas and Assistants
    "openai>=1.52.0,<=2.9.0",
    # NOTE: The Microsoft provider AI agent framework should only select one: AG2 or AutoGen. In recommended, it should
    # use AG2 because it's in migration of the AI agent frameworks
    # AG2 (AutoGen v2)
    "ag2>=0.10.2",
    # AutoGen AgentChat and extensions
    "autogen-agentchat>=0.7.5",
    "autogen-ext[openai]>=0.7.5",
    # LangChain core + LangGraph
    "langchain>=1.1.2",
    "langchain-core>=1.1.1",
    "langgraph>=1.0.4",
    # CrewAI and tools (broad min versions to avoid resolver conflicts)
    "crewai>=1.6.1",
    "crewai-tools>=1.6.1",
    # Semantic Kernel (Python)
    "semantic-kernel>=1.35.0",
    # LlamaIndex
    "llama-index>=0.14.10",
    # Phidata
    "phidata>=2.7.10,<3.0.0",
    # Google AI agent SDK (ADK)
    "google-adk>=1.20.0",
    # Pydantic AI by FastAPI Pydantic team
    "pydantic-ai>=1.27.0",
]

[tool.uv]
default-groups = [
    "dev",
    "pre-commit-ci",
]

[tool.hatch.build.targets.sdist]
include = ["gearmeshing_ai/"]

[tool.hatch.build.targets.wheel]
include = ["gearmeshing_ai/"]
